--- a/principal.html
+++ b/principal.html
@@ -44,7 +44,7 @@
     <section class="hero" >
         
         <img src="imagem.jpg/WhatsApp Image 2024-12-14 at 21.32.39.jpeg" alt="Imagem da Oficina"
-            class="img-fluid rounded shadow"><br><a href="#servicos" class="btn btn-primary mb-3">Saiba Mais</a><h1>Bem-vindo à o BSB CAR - Lanternagem e Pintura</h1>
+            class="img-fluid rounded shadow"><br><a href="#servicos" class="btn btn-primary mb-3">Saiba Mais</a><h1>Bem-vindo à BSB CAR - Lanternagem e Pintura</h1>
             <p>Excelência em reparos automotivos e pintura</p>
     </section>
 
